--- a/VidCoder/Resources/Translations/EncodingRes.nl.resx
+++ b/VidCoder/Resources/Translations/EncodingRes.nl.resx
@@ -288,12 +288,18 @@ Stel dit in als je weet dat een apparaat waarvoor je dit doet niet alle profiele
   <data name="IncludeChapterMarkersCheckBox" xml:space="preserve">
     <value>Hoofdstukmarkeringen meenemen</value>
   </data>
-  
+  <data name="TabHeader_Sizing" xml:space="preserve">
+    <value>Verschaling</value>
+  </data>
   <data name="TabHeader_VideoFilters" xml:space="preserve">
     <value>Videofilters</value>
   </data>
-  
-  
+  <data name="TabHeader_VideoEncoding" xml:space="preserve">
+    <value>Videocodering</value>
+  </data>
+  <data name="TabHeader_AudioEncoding" xml:space="preserve">
+    <value>Audiocodering</value>
+  </data>
   <data name="TabHeader_Advanced" xml:space="preserve">
     <value>Geavanceerde Video</value>
   </data>
@@ -757,7 +763,9 @@ Stel dit in als je weet dat een apparaat waarvoor je dit doet niet alle profiele
   <data name="DefaultFormat" xml:space="preserve">
     <value>{0} (Standaard)</value>
   </data>
-  
+  <data name="EncodingWindowTitle" xml:space="preserve">
+    <value>Coderingsvoorinstelling: {0}</value>
+  </data>
   <data name="AdvancedOptionsStringLabel" xml:space="preserve">
     <value>Extra x264 opties (geavanceerd):</value>
   </data>
@@ -883,7 +891,9 @@ Bikubisch: Dit is een OpenCL schaalmethode die gebruik kan maken van hardware ve
   <data name="AudioEncoder_Passthrough" xml:space="preserve">
     <value>Overnemen</value>
   </data>
-  
+  <data name="Passthrough_auto" xml:space="preserve">
+    <value>Automatisch</value>
+  </data>
   <data name="PassthroughScopeToolTip" xml:space="preserve">
     <value>Bepaalt welke invoer codecs worden overgenomen.</value>
   </data>
@@ -923,11 +933,22 @@ Bikubisch: Dit is een OpenCL schaalmethode die gebruik kan maken van hardware ve
   <data name="RotationLabel" xml:space="preserve">
     <value>Rotatie:</value>
   </data>
-  
-  
-  
-  
-  
+  <data name="ClosePresetsListToolTip" xml:space="preserve">
+    <value>Lijst met voorinstellingen sluiten</value>
+  </data>
+  <data name="OpenPresetsListToolTip" xml:space="preserve">
+    <value>Lijst met voorinstellingen openen</value>
+  </data>
+  <data name="DefaultChapterName" xml:space="preserve">
+    <value>Hoofdstuk {0}</value>
+    <comment>What a chapter will be named when not given a custom name. {0} is the chapter number.</comment>
+  </data>
+  <data name="PassthroughSettingsLabel" xml:space="preserve">
+    <value>Passthrough-instellingen</value>
+  </data>
+  <data name="PassthroughMaskLabel" xml:space="preserve">
+    <value>Passthrough toestaan voor:</value>
+  </data>
   <data name="Passthrough_aac" xml:space="preserve">
     <value>AAC</value>
   </data>
@@ -940,32 +961,88 @@ Bikubisch: Dit is een OpenCL schaalmethode die gebruik kan maken van hardware ve
   <data name="Passthrough_dtshd" xml:space="preserve">
     <value>DTS-HD</value>
   </data>
-  
-  
+  <data name="Passthrough_eac3" xml:space="preserve">
+    <value>E-AC3</value>
+  </data>
+  <data name="Passthrough_flac" xml:space="preserve">
+    <value>FLAC</value>
+  </data>
   <data name="Passthrough_mp3" xml:space="preserve">
     <value>MP3</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="Passthrough_truehd" xml:space="preserve">
+    <value>TrueHD</value>
+  </data>
+  <data name="InterlaceDetectionLabel" xml:space="preserve">
+    <value>Interlacedetectie:</value>
+  </data>
+  <data name="ModeLabel" xml:space="preserve">
+    <value>Modus:</value>
+    <comment>Label for the sizing or padding mode.</comment>
+  </data>
+  <data name="AnamorphicCheckbox" xml:space="preserve">
+    <value>Gebruik Anamorf</value>
+  </data>
+  <data name="AllowUpscalingCheckbox" xml:space="preserve">
+    <value>Upscaling toestaan</value>
+  </data>
+  <data name="SizingModeManual" xml:space="preserve">
+    <value>Handmatig</value>
+    <comment>Choice for the user to enter all sizing information manually.</comment>
+  </data>
+  <data name="UpscaleMaxFormat" xml:space="preserve">
+    <value>Max upscale {0}x</value>
+    <comment>Label for scaling option to allow upscaling, but only to a particular multiple of the source resolution. {0} is the multiple, e.g. 2, 3 or 4</comment>
+  </data>
+  <data name="ScalingMode_DownscaleOnly" xml:space="preserve">
+    <value>Alleen verkleinen</value>
+  </data>
+  <data name="ScalingMode_Fill" xml:space="preserve">
+    <value>Verschalen naar doelgrootte</value>
+  </data>
+  <data name="ScalingModeLabel" xml:space="preserve">
+    <value>Verschalingsmodus:</value>
+  </data>
+  <data name="PaddingMode_Fill" xml:space="preserve">
+    <value>Vullen</value>
+  </data>
+  <data name="PaddingMode_Width" xml:space="preserve">
+    <value>Breedte</value>
+  </data>
+  <data name="PaddingMode_Height" xml:space="preserve">
+    <value>Hoogte</value>
+  </data>
+  <data name="TargetWidthLabel" xml:space="preserve">
+    <value>Doelbreedte:</value>
+  </data>
+  <data name="TargetHeightLabel" xml:space="preserve">
+    <value>Doelhoogte:</value>
+  </data>
+  <data name="PadColorLabel" xml:space="preserve">
+    <value>Kleur:</value>
+  </data>
+  <data name="ColorPickerAdvancedButton" xml:space="preserve">
+    <value>Geavanceerd</value>
+  </data>
+  <data name="ColorPickerStandardButton" xml:space="preserve">
+    <value>Standaard</value>
+  </data>
+  <data name="ColorPickerStandardColorsHeader" xml:space="preserve">
+    <value>Standaardkleuren</value>
+  </data>
+  <data name="AnamorphicToolTip" xml:space="preserve">
+    <value>Met Anamorphic zijn niet-vierkante pixels toegestaan. Dit kan leiden tot efficiëntere opslag, maar niet alle spelers ondersteunen dit.</value>
+  </data>
+  <data name="ResolutionLabel" xml:space="preserve">
+    <value>Resolutie:</value>
+    <comment>Label for a video resolution in pixels.</comment>
+  </data>
+  <data name="CustomFilterToolTipFormatPart" xml:space="preserve">
+    <value>Formaat: sleutel1=waarde1:sleutel2 = waarde2:...</value>
+    <comment>The "format" portion of the custom filter tooltip. When translating, keep the = and : the same and only replace "key1", "value2", etc.</comment>
+  </data>
+  <data name="CustomFilterToolTipKeysLabel" xml:space="preserve">
+    <value>Sleutels:</value>
+    <comment>The label for the "keys" portion of the custom filter tooltip.</comment>
+  </data>
 </root>
