--- a/VidCoder/Resources/Translations/EnumsRes.nl.resx
+++ b/VidCoder/Resources/Translations/EnumsRes.nl.resx
@@ -129,8 +129,12 @@
   <data name="Anamorphic_Strict" xml:space="preserve">
     <value>Strikt</value>
   </data>
-  
-  
+  <data name="CombDetect_fast" xml:space="preserve">
+    <value>Snel</value>
+  </data>
+  <data name="CombDetect_permissive" xml:space="preserve">
+    <value>Minder gevoelig</value>
+  </data>
   <data name="Custom" xml:space="preserve">
     <value>Aangepast</value>
   </data>
@@ -143,34 +147,67 @@
   <data name="Default" xml:space="preserve">
     <value>Standaard</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="DeinterlacePreset_bob" xml:space="preserve">
+    <value>Bob</value>
+    <comment>A deinterlace method named "Bob". The original name most likely refers to an object bobbing up and down.</comment>
+  </data>
+  <data name="DeinterlacePreset_eedi2" xml:space="preserve">
+    <value>EEDI2</value>
+  </data>
+  <data name="DeinterlacePreset_eedi2bob" xml:space="preserve">
+    <value>EEDI2 Bob</value>
+  </data>
+  <data name="DeinterlacePreset_skipspatial" xml:space="preserve">
+    <value>Ruimtelijke controle overslaan</value>
+  </data>
+  <data name="Deinterlace_Decomb" xml:space="preserve">
+    <value>Decomb</value>
+  </data>
+  <data name="Deinterlace_Yadif" xml:space="preserve">
+    <value>Yadif</value>
+  </data>
+  <data name="DenoisePreset_light" xml:space="preserve">
+    <value>Licht</value>
+  </data>
+  <data name="DenoisePreset_medium" xml:space="preserve">
+    <value>Medium</value>
+  </data>
+  <data name="DenoisePreset_strong" xml:space="preserve">
+    <value>Sterk</value>
+  </data>
+  <data name="DenoisePreset_ultralight" xml:space="preserve">
+    <value>Zeer licht</value>
+  </data>
+  <data name="DenoiseTune_animation" xml:space="preserve">
+    <value>Animatie</value>
+  </data>
+  <data name="DenoiseTune_film" xml:space="preserve">
+    <value>Film</value>
+  </data>
+  <data name="DenoiseTune_grain" xml:space="preserve">
+    <value>Korrel</value>
+  </data>
+  <data name="DenoiseTune_highmotion" xml:space="preserve">
+    <value>Veel beweging</value>
+  </data>
   <data name="Denoise_HQDN3D" xml:space="preserve">
     <value>hqdn3d</value>
   </data>
   <data name="Denoise_NLMeans" xml:space="preserve">
     <value>NL-Means</value>
   </data>
-  
+  <data name="EncodeCompleteActionType_CloseProgram" xml:space="preserve">
+    <value>VidCoder sluiten</value>
+  </data>
   <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
     <value>Doe niets</value>
   </data>
   <data name="EncodeCompleteActionType_EjectDisc" xml:space="preserve">
     <value>Uitwerpen {0}:</value>
   </data>
-  
+  <data name="EncodeCompleteActionType_Hibernate" xml:space="preserve">
+    <value>Slaapstand</value>
+  </data>
   <data name="EncodeCompleteActionType_LogOff" xml:space="preserve">
     <value>Afmelden</value>
   </data>
@@ -183,9 +220,18 @@
   <data name="Off" xml:space="preserve">
     <value>Uit</value>
   </data>
-  
-  
-  
+  <data name="TitleType_Bluray" xml:space="preserve">
+    <value>Blu-ray</value>
+    <comment>What to display when the source is a Blu-ray</comment>
+  </data>
+  <data name="TitleType_Dvd" xml:space="preserve">
+    <value>DVD</value>
+    <comment>What to display when the source is a DVD</comment>
+  </data>
+  <data name="TitleType_Stream" xml:space="preserve">
+    <value>Bestand</value>
+    <comment>What to display when the source is a file</comment>
+  </data>
   <data name="VideoRangeType_Chapters" xml:space="preserve">
     <value>Hoofdstukken</value>
   </data>
