--- a/VidCoder/Resources/Translations/MainRes.it.resx
+++ b/VidCoder/Resources/Translations/MainRes.it.resx
@@ -613,7 +613,7 @@
     <comment>Dialog title for a message explaining that the current database file is unsupported.</comment>
   </data>
   <data name="PickerMenuItem" xml:space="preserve">
-    <value>Selezione</value>
+    <value>Selettore</value>
   </data>
   <data name="CouldNotLoadPickerMessage" xml:space="preserve">
     <value>Impossibile caricare il selettore: </value>
