--- a/VidCoder/Resources/Translations/EncodingRes.ru.resx
+++ b/VidCoder/Resources/Translations/EncodingRes.ru.resx
@@ -230,12 +230,18 @@
   <data name="IncludeChapterMarkersCheckBox" xml:space="preserve">
     <value>Включить маркеры</value>
   </data>
-  
+  <data name="TabHeader_Sizing" xml:space="preserve">
+    <value>Калибровка</value>
+  </data>
   <data name="TabHeader_VideoFilters" xml:space="preserve">
     <value>Видео фильтры</value>
   </data>
-  
-  
+  <data name="TabHeader_VideoEncoding" xml:space="preserve">
+    <value>Видео кодирование</value>
+  </data>
+  <data name="TabHeader_AudioEncoding" xml:space="preserve">
+    <value>Аудио кодирование</value>
+  </data>
   <data name="TabHeader_Advanced" xml:space="preserve">
     <value>Расширенный</value>
   </data>
@@ -908,26 +914,76 @@
   <data name="Passthrough_truehd" xml:space="preserve">
     <value>TrueHD</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="InterlaceDetectionLabel" xml:space="preserve">
+    <value>Чересстрочное обнаружения:</value>
+  </data>
+  <data name="ModeLabel" xml:space="preserve">
+    <value>Режим:</value>
+    <comment>Label for the sizing or padding mode.</comment>
+  </data>
+  <data name="AnamorphicCheckbox" xml:space="preserve">
+    <value>Использование анаморфного</value>
+  </data>
+  <data name="AllowUpscalingCheckbox" xml:space="preserve">
+    <value>Разрешить масштабирование</value>
+  </data>
+  <data name="SizingModeManual" xml:space="preserve">
+    <value>Руководство</value>
+    <comment>Choice for the user to enter all sizing information manually.</comment>
+  </data>
+  <data name="UpscaleMaxFormat" xml:space="preserve">
+    <value>Высококлассные {0}x Макс</value>
+    <comment>Label for scaling option to allow upscaling, but only to a particular multiple of the source resolution. {0} is the multiple, e.g. 2, 3 or 4</comment>
+  </data>
+  <data name="ScalingMode_DownscaleOnly" xml:space="preserve">
+    <value>Только</value>
+  </data>
+  <data name="ScalingMode_Fill" xml:space="preserve">
+    <value>Шкала вверх/вниз целевой</value>
+  </data>
+  <data name="ScalingModeLabel" xml:space="preserve">
+    <value>Режим масштабирования:</value>
+  </data>
+  <data name="PaddingMode_Fill" xml:space="preserve">
+    <value>Заполнить</value>
+  </data>
+  <data name="PaddingMode_Width" xml:space="preserve">
+    <value>Ширина</value>
+  </data>
+  <data name="PaddingMode_Height" xml:space="preserve">
+    <value>Высота</value>
+  </data>
+  <data name="TargetWidthLabel" xml:space="preserve">
+    <value>Целевая ширина:</value>
+  </data>
+  <data name="TargetHeightLabel" xml:space="preserve">
+    <value>Высота цели:</value>
+  </data>
+  <data name="PadColorLabel" xml:space="preserve">
+    <value>Цвет:</value>
+  </data>
+  <data name="ColorPickerAdvancedButton" xml:space="preserve">
+    <value>Дополнительно</value>
+  </data>
+  <data name="ColorPickerStandardButton" xml:space="preserve">
+    <value>Стандартный</value>
+  </data>
+  <data name="ColorPickerStandardColorsHeader" xml:space="preserve">
+    <value>Стандартные цвета</value>
+  </data>
+  <data name="AnamorphicToolTip" xml:space="preserve">
+    <value>При включенном Anamorphic допускаются не квадратные пиксели. Это может привести к более эффективному хранению, но не все плееры поддерживают это.</value>
+  </data>
+  <data name="ResolutionLabel" xml:space="preserve">
+    <value>Разрешение:</value>
+    <comment>Label for a video resolution in pixels.</comment>
+  </data>
+  <data name="CustomFilterToolTipFormatPart" xml:space="preserve">
+    <value>Формат: ключ1 = value1:key2 = value2:...</value>
+    <comment>The "format" portion of the custom filter tooltip. When translating, keep the = and : the same and only replace "key1", "value2", etc.</comment>
+  </data>
+  <data name="CustomFilterToolTipKeysLabel" xml:space="preserve">
+    <value>Ключи:</value>
+    <comment>The label for the "keys" portion of the custom filter tooltip.</comment>
+  </data>
 </root>
