--- a/VidCoder/Resources/Translations/EnumsRes.ru.resx
+++ b/VidCoder/Resources/Translations/EnumsRes.ru.resx
@@ -129,8 +129,12 @@
   <data name="Anamorphic_Strict" xml:space="preserve">
     <value>Точно</value>
   </data>
-  
-  
+  <data name="CombDetect_fast" xml:space="preserve">
+    <value>Быстро</value>
+  </data>
+  <data name="CombDetect_permissive" xml:space="preserve">
+    <value>Слабая чувствительность</value>
+  </data>
   <data name="Custom" xml:space="preserve">
     <value>Пользовательский</value>
   </data>
@@ -143,20 +147,49 @@
   <data name="Default" xml:space="preserve">
     <value>По умолчанию</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="DeinterlacePreset_bob" xml:space="preserve">
+    <value>Bob</value>
+    <comment>A deinterlace method named "Bob". The original name most likely refers to an object bobbing up and down.</comment>
+  </data>
+  <data name="DeinterlacePreset_eedi2" xml:space="preserve">
+    <value>EEDI2</value>
+  </data>
+  <data name="DeinterlacePreset_eedi2bob" xml:space="preserve">
+    <value>EEDI2 Bob</value>
+  </data>
+  <data name="DeinterlacePreset_skipspatial" xml:space="preserve">
+    <value>Пропустить Пространственную проверку</value>
+  </data>
+  <data name="Deinterlace_Decomb" xml:space="preserve">
+    <value>Decomb</value>
+  </data>
+  <data name="Deinterlace_Yadif" xml:space="preserve">
+    <value>Yadif</value>
+  </data>
+  <data name="DenoisePreset_light" xml:space="preserve">
+    <value>Лёгкий</value>
+  </data>
+  <data name="DenoisePreset_medium" xml:space="preserve">
+    <value>Средний</value>
+  </data>
+  <data name="DenoisePreset_strong" xml:space="preserve">
+    <value>Тяжелый</value>
+  </data>
+  <data name="DenoisePreset_ultralight" xml:space="preserve">
+    <value>Ultralight</value>
+  </data>
+  <data name="DenoiseTune_animation" xml:space="preserve">
+    <value>Анимация</value>
+  </data>
+  <data name="DenoiseTune_film" xml:space="preserve">
+    <value>Фильм</value>
+  </data>
+  <data name="DenoiseTune_grain" xml:space="preserve">
+    <value>Зерна</value>
+  </data>
+  <data name="DenoiseTune_highmotion" xml:space="preserve">
+    <value>Высокое движение</value>
+  </data>
   <data name="Denoise_HQDN3D" xml:space="preserve">
     <value>hqdn3d</value>
   </data>
