--- a/VidCoder/Resources/Translations/MiscRes.ja.resx
+++ b/VidCoder/Resources/Translations/MiscRes.ja.resx
@@ -194,8 +194,13 @@
     <value>{0} ベータ({1})</value>
     <comment>First is version, second is architecture. For example: 1.4.2 Beta (x64)</comment>
   </data>
-  
-  
+  <data name="NameDialogTitle" xml:space="preserve">
+    <value>名前</value>
+    <comment>Title for dialog when  naming a preset or  picker</comment>
+  </data>
+  <data name="ChooseNamePreset" xml:space="preserve">
+    <value>プリセット名を選択:</value>
+  </data>
   <data name="ApplyUpdateDialogTitle" xml:space="preserve">
     <value>更新しますか？</value>
   </data>
@@ -247,5 +252,7 @@
   <data name="EncodeCompleteWarning_HibernateTitle" xml:space="preserve">
     <value>まもなく休止状態になります</value>
   </data>
-  
+  <data name="ChooseNamePicker" xml:space="preserve">
+    <value>ピッカーの名前を選択:</value>
+  </data>
 </root>
